tests/typechecker/should_fail/proc_sets2.csp
b = card({STOP, STOP}) == 1
